Update JavaScript Events, JavaScript CSS classes

--- a/index.html
+++ b/index.html
@@ -1,135 +1,157 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/style.css"
+    />
     <script src="main.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="grid-container">
-        <div class="item1">
-            <h1>Fluency Topic List</h1>
-        </div>
-        <div class="item2"></div>
-        <div class="item3">
-            <table>
-                <tr>
-                    <th>Code Topic</th>
-                    <th>Last Updated</th>
-                    <th>Notes to Bro. James</th>
-                    <th>Score</th>
-                    <th>Fluency</th>
-                </tr>
+      <div class="item1">
+        <h1>Fluency Topic List</h1>
+      </div>
+      <div class="item2"></div>
+      <div class="item3">
+        <table>
+          <tr>
+            <th>Code Topic</th>
+            <th>Last Updated</th>
+            <th>Notes to Bro. James</th>
+            <th>Score</th>
+            <th>Fluency</th>
+          </tr>
 
-                <tr>
-                    <td>
-                        <a href="https://github.com/ree17017/CIT261/blob/master/reflection_journal.md">Weekly
-                            Journal</a>
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td><a href="html5.html">HTML5 Tags</a></td>
-                    <td></td>
-                    <td>TODO</td>
-                    <td>0/10</td>
-                    <td>??</td>
-                </tr>
-                <tr>
-                    <td><a href="slider.html">CSS3 Class Properties w/ JavaScript</a></td>
-                    <td>5/30/19</td>
-                    <td>Reviewing</td>
-                    <td>0/10</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td><a href="javascript_events.html">JavaScript Events</a></td>
-                    <td></td>
-                    <td></td>
-                    <td>0/10</td>
-                    <td>??</td>
-                </tr>
-                <tr>
-                    <td><a href="domManipulation.html">DOM</a><br>Got refernce from <a
-                            href="https://codepen.io/chadwyck242/pen/gwqaOJ">here</a></td>
-                    <td>5/23/19</td>
-                    <td>Reviewing</td>
-                    <td>6/10</td>
-                    <td>Basic</td>
-                </tr>
+          <tr>
+            <td>
+              <a
+                href="https://github.com/ree17017/CIT261/blob/master/reflection_journal.md"
+                >Weekly Journal</a
+              >
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>CSS3 Transitions, Animations, and Transformations</td>
+            <td></td>
+            <td></td>
+            <td>0/10</td>
+            <td>??</td>
+          </tr>
+          <tr>
+            <td>
+              CSS3 Animations
+            </td>
+            <td></td>
+            <td></td>
+            <td>0/10</td>
+            <td>??</td>
+          </tr>
+          <tr>
+            <td>
+              CSS3 Class Properties w/ JavaScript <a href="slider.html">1. </a
+              ><a href="javascript_events.html"> 2.</a>
+            </td>
+            <td>June 16, 2019</td>
+            <td>Please review 2 for grading.</td>
+            <td>0/10</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><a href="javascript_events.html">JavaScript Events</a></td>
+            <td>June 16, 2019</td>
+            <td>Please review code</td>
+            <td>0/10</td>
+            <td>??</td>
+          </tr>
+          <tr>
+            <td>
+              <a href="domManipulation.html">DOM</a><br />Got refernce from
+              <a href="https://codepen.io/chadwyck242/pen/gwqaOJ">here</a>
+            </td>
+            <td>5/23/19</td>
+            <td>Reviewing</td>
+            <td>6/10</td>
+            <td>Basic</td>
+          </tr>
+          <tr>
+            <td><a href="slider.html">CSS3 Transform</a></td>
+            <td>5/30/19</td>
+            <td>Reviewing</td>
+            <td>6/10</td>
+            <td>Basic</td>
+          </tr>
 
+          <tr>
+            <td><a href="slider.html">CSS3 Transitions</a></td>
+            <td>5/30/19</td>
+            <td>Reviewing</td>
+            <td>6/10</td>
+            <td>Basic</td>
+          </tr>
+          <tr>
+            <td><a href="html5.html">HTML5 Tags</a></td>
+            <td>5/8/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+          </tr>
+          <tr>
+            <td><a href="javascript.html">JavaScript</a></td>
+            <td>5/9/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+          </tr>
+          <tr>
+            <td><a href="javaScript_objects.html">JavaScript Objects</a></td>
+            <td>5/9/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+          </tr>
+          <tr>
+            <td><a href="local_storage.html">Local Storage</a></td>
+            <td>5/16/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+          </tr>
 
-                <tr>
-                    <td><a href="slider.html">CSS3 Transitions</a></td>
-                    <td>5/30/19</td>
-                    <td>Reviewing</td>
-                    <td>6/10</td>
-                    <td>Basic</td>
-                </tr>
-                <tr>
-                    <td><a href="slider.html">CSS3 Transform</a></td>
-                    <td>5/30/19</td>
-                    <td>Reviewing</td>
-                    <td>6/10</td>
-                    <td>Basic
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="javascript.html">JavaScript</a></td>
-                    <td>5/9/19</td>
-                    <td>Done</td>
-                    <td>10/10</td>
-                    <td>Skilled</td>
-                </tr>
-                <tr>
-                    <td><a href="javaScript_objects.html">JavaScript Objects</a></td>
-                    <td>5/9/19</td>
-                    <td>Done</td>
-                    <td>10/10</td>
-                    <td>Skilled</td>
-                </tr>
-                <tr>
-                    <td><a href="local_storage.html">Local Storage</a></td>
-                    <td>5/16/19</td>
-                    <td>Done</td>
-                    <td>10/10</td>
-                    <td>Skilled</td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>JSON</p>
-                        attempt: <a href="local_storage.html">1.</a>
-                        <a href="ajax.html">2.</a>
-                    </td>
-                    <td>5/30/19</td>
-                    <td>Done</td>
-                    <td>10/10</td>
-                    <td>Skilled</td>
-                </tr>
-                <tr>
-                    <td><a href="ajax.html">AJAX</a></td>
-                    <td>5/30/19</td>
-                    <td>Done
-                    <td>10/10</td>
-                    <td>Skilled
-                    <td>
-                </tr>
-
-
-            </table>
-        </div>
-        <div class="item4"></div>
-        <div class="item5"></div>
+          <tr>
+            <td>
+              <p>JSON</p>
+              attempt: <a href="local_storage.html">1.</a>
+              <a href="ajax.html">2.</a>
+            </td>
+            <td>5/30/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+          </tr>
+          <tr>
+            <td><a href="ajax.html">AJAX</a></td>
+            <td>5/30/19</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+      <div class="item4"></div>
+      <div class="item5"></div>
     </div>
-</body>
-
+  </body>
 </html>
