--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           </tr>
           <tr>
             <td>CSS3 Transitions, Animations, and Transformations</td>
-            <td></td>
-            <td></td>
+            <td>June 22, 2019</td>
+            <td>Please review for grading</td>
             <td>0/10</td>
             <td>??</td>
           </tr>
@@ -53,8 +53,8 @@
             <td>
               CSS3 Animations
             </td>
-            <td></td>
-            <td></td>
+            <td>June 22, 2019</td>
+            <td>Please review for grading</td>
             <td>0/10</td>
             <td>??</td>
           </tr>
@@ -64,20 +64,20 @@
               ><a href="javascript_events.html"> 2.</a>
             </td>
             <td>June 16, 2019</td>
-            <td>Please review 2 for grading.</td>
-            <td>0/10</td>
+            <td>Done</td>
+            <td>10/10</td>
             <td></td>
           </tr>
           <tr>
             <td><a href="javascript_events.html">JavaScript Events</a></td>
             <td>June 16, 2019</td>
-            <td>Please review code</td>
-            <td>0/10</td>
+            <td>Done</td>
+            <td>10/10</td>
             <td>??</td>
           </tr>
           <tr>
             <td>
-              <a href="domManipulation.html">DOM</a><br />Got refernce from
+              <a href="domManipulation.html">DOM</a><br />Got reference from
               <a href="https://codepen.io/chadwyck242/pen/gwqaOJ">here</a>
             </td>
             <td>5/23/19</td>
