--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <td></td>
           </tr>
           <tr>
-            <td>CSS3 Transitions, Animations, and Transformations</td>
+            <td>
+              <a href="">CSS3 Transitions, Animations, and Transformations</a>
+            </td>
             <td>June 22, 2019</td>
             <td>Please review for grading</td>
             <td>0/10</td>
@@ -51,7 +53,7 @@
           </tr>
           <tr>
             <td>
-              CSS3 Animations
+              <a href="cssanimations.html">CSS3 Animations</a>
             </td>
             <td>June 22, 2019</td>
             <td>Please review for grading</td>
