--- a/cssanimations.html
+++ b/cssanimations.html
@@ -69,6 +69,9 @@
           cursor: pointer;
         }
       }
+      .spin {
+        animation: spin 4s linear infinite;
+      }
     </style>
   </head>
 
