--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <td>June 22, 2019</td>
             <td>Please review for grading</td>
             <td>0/10</td>
-            <td>??</td>
+            <td></td>
           </tr>
           <tr>
             <td>
               <a href="cssanimations.html">CSS3 Animations</a>
             </td>
             <td>June 22, 2019</td>
-            <td>Please review for grading</td>
-            <td>0/10</td>
-            <td>??</td>
+            <td>Done</td>
+            <td>10/10</td>
+            <td>Skilled</td>
           </tr>
           <tr>
             <td>
@@ -68,14 +68,14 @@
             <td>June 16, 2019</td>
             <td>Done</td>
             <td>10/10</td>
-            <td></td>
+            <td>skilled</td>
           </tr>
           <tr>
             <td><a href="javascript_events.html">JavaScript Events</a></td>
             <td>June 16, 2019</td>
             <td>Done</td>
             <td>10/10</td>
-            <td>??</td>
+            <td>Skilled</td>
           </tr>
           <tr>
             <td>
