--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
               <a href="domManipulation.html">DOM</a><br />Got reference from
               <a href="https://codepen.io/chadwyck242/pen/gwqaOJ">here</a>
             </td>
-            <td>June 27, 2019</td>
-            <td>Please review for re-grading</td>
+            <td>5/23/19</td>
+            <td>Reviewing</td>
             <td>6/10</td>
             <td>Basic</td>
           </tr>
           <tr>
             <td><a href="slider.html">CSS3 Transform</a></td>
-            <td>June 27, 2019</td>
+            <td>June 22, 2019</td>
             <td>Please review for re-grading</td>
             <td>6/10</td>
             <td>Basic</td>
@@ -99,8 +99,8 @@
 
           <tr>
             <td><a href="slider.html">CSS3 Transitions</a></td>
-            <td>5/30/19</td>
-            <td>Reviewing</td>
+            <td>June 22, 2019</td>
+            <td>Please review for re-grade</td>
             <td>6/10</td>
             <td>Basic</td>
           </tr>
